[tool.poetry]
name = "picarro-data"
version = "0.1.0"
description = "Data pipelines for the Picarro air analyzer"
authors = ["s-bessey <sam_bessey@brown.edu>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
polars = "^1.3.0"
firebase-admin = "^6.5.0"
fsspec = "^2024.6.1"
gcsfs = "^2024.6.1"
gcloud = "^0.18.3"
pathlib = "^1.0.1"

[tool.poetry.group.dev.dependencies]
ruff = "^0.5.5"
mypy = "^1.11.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
